# py_lucidum

./: .gitignore  DEVELOPMENT.md  PROJECT_PLAN.md  README.md  USAGE.md  filter_spec.csv  pyproject.toml
datasets/: motor_premiums.parquet
local/uk_map/scripts/: convert_gpkg_to_geojson.py
specs/: filter_spec.csv  home_filter_spec.csv
src/py_lucidum/: __init__.py  app.py  cli.py  demo.py  query.py
src/py_lucidum/app/: __init__.py  assets.py  context.py  factory.py
src/py_lucidum/core/: __init__.py  dataset.py  filters.py  schema.py  sql.py
src/py_lucidum/static/: app.css  app.js  index.html
src/py_lucidum/tools/gbm/: __init__.py
src/py_lucidum/tools/glm/: __init__.py
src/py_lucidum/tools/line_bar/: __init__.py  query.py  routes.py
src/py_lucidum/tools/uk_map/: __init__.py  query.py  routes.py
src/py_lucidum/tools/uk_map/static/geodata/: areas_MappaR.geojson
tests/: test_browser_smoke.py  test_cli.py  test_demo_dataset.py  test_line_bar.py  test_pipx_install.py  test_static_assets.py  test_uk_map.py
