[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-lucidum"
version = "0.1.0"
description = "Interactive data exploration workbench for local CSV and Parquet files."
readme = "PROJECT_PLAN.md"
requires-python = ">=3.9"
dependencies = [
  "duckdb>=1.1",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
]

[project.scripts]
lucidum = "py_lucidum.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/py_lucidum"]

[tool.hatch.build.targets.wheel.force-include]
"src/py_lucidum/static" = "py_lucidum/static"
"favicon.ico" = "py_lucidum/static/favicon.ico"
